[gd_scene load_steps=45 format=3 uid="uid://bnquitpfj1c1f"]

[ext_resource type="Script" uid="uid://dflpvrhjbduh4" path="res://enemy_ranged.gd" id="1_a0s14"]
[ext_resource type="Texture2D" uid="uid://5wl5gymgjb4v" path="res://assets/cat2.png" id="2_jnrr6"]
[ext_resource type="Texture2D" uid="uid://cwdot6yjj10sx" path="res://assets/HP/Sprite-0003 (1).png" id="3_4frp2"]
[ext_resource type="Texture2D" uid="uid://b0o1utkqcos4h" path="res://assets/HP/Sprite-0001 (1).png" id="4_eqgjy"]
[ext_resource type="Texture2D" uid="uid://xk1edn7b6hr3" path="res://assets/HP/Sprite-0002 (1).png" id="5_fd3ck"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2stup"]
radius = 89.005615

[sub_resource type="AtlasTexture" id="AtlasTexture_1wqj1"]
atlas = ExtResource("2_jnrr6")
region = Rect2(0, 246, 48, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_c67sg"]
atlas = ExtResource("2_jnrr6")
region = Rect2(48, 246, 48, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob0lt"]
atlas = ExtResource("2_jnrr6")
region = Rect2(96, 246, 48, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqqnl"]
atlas = ExtResource("2_jnrr6")
region = Rect2(144, 246, 48, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3b2u"]
atlas = ExtResource("2_jnrr6")
region = Rect2(192, 246, 48, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcr51"]
atlas = ExtResource("2_jnrr6")
region = Rect2(240, 246, 48, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qsi1"]
atlas = ExtResource("2_jnrr6")
region = Rect2(288, 246, 48, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve8gy"]
atlas = ExtResource("2_jnrr6")
region = Rect2(0, 145, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_84wwh"]
atlas = ExtResource("2_jnrr6")
region = Rect2(48, 145, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a8ib"]
atlas = ExtResource("2_jnrr6")
region = Rect2(96, 145, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipr1b"]
atlas = ExtResource("2_jnrr6")
region = Rect2(144, 145, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_oytai"]
atlas = ExtResource("2_jnrr6")
region = Rect2(192, 145, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_rirv3"]
atlas = ExtResource("2_jnrr6")
region = Rect2(240, 145, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f8we"]
atlas = ExtResource("2_jnrr6")
region = Rect2(288, 145, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_1id0d"]
atlas = ExtResource("2_jnrr6")
region = Rect2(336, 145, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdk6g"]
atlas = ExtResource("2_jnrr6")
region = Rect2(0, 96, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmn8a"]
atlas = ExtResource("2_jnrr6")
region = Rect2(48, 96, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3u4k"]
atlas = ExtResource("2_jnrr6")
region = Rect2(96, 96, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycoln"]
atlas = ExtResource("2_jnrr6")
region = Rect2(0, 193, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd3yo"]
atlas = ExtResource("2_jnrr6")
region = Rect2(48, 193, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyx2r"]
atlas = ExtResource("2_jnrr6")
region = Rect2(96, 193, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsrxs"]
atlas = ExtResource("2_jnrr6")
region = Rect2(144, 193, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_scasc"]
atlas = ExtResource("2_jnrr6")
region = Rect2(0, 6, 48, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_njbyc"]
atlas = ExtResource("2_jnrr6")
region = Rect2(48, 6, 48, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7mp1"]
atlas = ExtResource("2_jnrr6")
region = Rect2(96, 6, 48, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucgrs"]
atlas = ExtResource("2_jnrr6")
region = Rect2(144, 6, 48, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_3k1wr"]
atlas = ExtResource("2_jnrr6")
region = Rect2(192, 6, 48, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtkb7"]
atlas = ExtResource("2_jnrr6")
region = Rect2(240, 6, 48, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_x3b2u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wqj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c67sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob0lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqqnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3b2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcr51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qsi1")
}],
"loop": false,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve8gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84wwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a8ib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipr1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oytai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rirv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f8we")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1id0d")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdk6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmn8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3u4k")
}],
"loop": false,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycoln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hd3yo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyx2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsrxs")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_scasc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njbyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7mp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucgrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3k1wr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtkb7")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_qpnbb"]
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}

[sub_resource type="Animation" id="Animation_yagkk"]
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}

[sub_resource type="Animation" id="Animation_is77k"]
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Hurt"]
}

[sub_resource type="Animation" id="Animation_gcr51"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}

[sub_resource type="Animation" id="Animation_ctq6c"]
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Run"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8qsi1"]
_data = {
&"Attack": SubResource("Animation_qpnbb"),
&"Death": SubResource("Animation_yagkk"),
&"Hurt": SubResource("Animation_is77k"),
&"Idle": SubResource("Animation_gcr51"),
&"Run": SubResource("Animation_ctq6c")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ve8gy"]
radius = 91.00549

[sub_resource type="CircleShape2D" id="CircleShape2D_84wwh"]
radius = 52.03845

[sub_resource type="CircleShape2D" id="CircleShape2D_7a8ib"]
radius = 165.01212

[node name="Enemy_Ranged" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 5
script = ExtResource("1_a0s14")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, -105)
shape = SubResource("CircleShape2D_2stup")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4, -95.00001)
scale = Vector2(4.894445, 4.894444)
sprite_frames = SubResource("SpriteFrames_x3b2u")
animation = &"Attack"
autoplay = "Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8qsi1")
}

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-12, -89)
shape = SubResource("CircleShape2D_ve8gy")

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2(56, -50)
shape = SubResource("CircleShape2D_84wwh")

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(-9, -104)
shape = SubResource("CircleShape2D_7a8ib")

[node name="HealthBar" type="TextureProgressBar" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = -120.0
offset_right = 35.0
offset_bottom = -109.0
grow_horizontal = 2
grow_vertical = 2
max_value = 50.0
value = 50.0
texture_under = ExtResource("3_4frp2")
texture_over = ExtResource("4_eqgjy")
texture_progress = ExtResource("5_fd3ck")
tint_progress = Color(1, 0, 0, 1)

[node name="ShootPoint" type="Marker2D" parent="."]

[node name="ProjectileSpawner" type="Node" parent="."]
