extends CharacterBody2D

enum State { IDLE, CHASE, ATTACK, HURT, DEATH }

# –≠–∫—Å–ø–æ—Ä—Ç–∏—Ä—É–µ–º—ã–µ –ø–∞—Ä–∞–º–µ—Ç—Ä—ã
@export var max_health: float = 50.0
@export var move_speed: float = 120.0
@export var attack_damage: float = 15.0
@export var attack_range: float = 300.0
@export var min_shooting_distance: float = 150.0
@export var detection_range: float = 2300.0
@export var player_detection_range: float = 200.0
@export var attack_cooldown: float = 2.0
@export var gravity: float = 800.0
@export var projectile_scene: PackedScene
@export var projectile_speed: float = 300.0
@export var health_bar_path: NodePath = "HealthBar"
@export var item_drop_scene: PackedScene
@export var item_drop_chance: float = 0.2
@export var crystal_drop_scene: PackedScene
@export var crystal_drop_chance: float = 0.25
@export var enemy_id: String = "enemy_ranged_"

# –ü–µ—Ä–µ–º–µ–Ω–Ω—ã–µ
var current_health: float
var state: State = State.IDLE
var player: Node2D
var cheese: Node2D
var can_attack: bool = true
var is_attacking: bool = false
var my_unique_id: String = ""
var target: Node2D = null
var original_target: Node2D = null
var is_distracted_by_player: bool = false
var distraction_cooldown: float = 0.0
var is_dying: bool = false

# –ù–æ–¥—ã
@onready var anim_player: AnimationPlayer = $AnimationPlayer
@onready var sprite: AnimatedSprite2D = $AnimatedSprite2D
@onready var attack_range_area: Area2D = $AttackRange
@onready var hit_box: Area2D = $HitBox
@onready var health_bar: TextureProgressBar = null
@onready var player_detection_area: Area2D = $PlayerDetectionArea
@onready var shoot_point: Marker2D = $ShootPoint
@onready var save_system = get_node_or_null("/root/save_system")

func _ready():
	# –ì–µ–Ω–µ—Ä–∏—Ä—É–µ–º —É–Ω–∏–∫–∞–ª—å–Ω—ã–π ID
	my_unique_id = enemy_id + "_" + str(int(global_position.x)) + "_" + str(int(global_position.y)) + "_" + str(Time.get_ticks_msec())
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º, –Ω–µ —É–±–∏—Ç –ª–∏ —É–∂–µ –≤—Ä–∞–≥
	if save_system and save_system.is_enemy_killed(my_unique_id):
		print("–í—Ä–∞–≥ —É–∂–µ —É–±–∏—Ç, —É–¥–∞–ª—è–µ–º: ", my_unique_id)
		queue_free()
		return
	
	current_health = max_health
	if health_bar_path and has_node(health_bar_path):
		health_bar = get_node(health_bar_path)
		health_bar.max_value = max_health
		health_bar.value = current_health
	
	# –î–æ–±–∞–≤–ª—è–µ–º –≤ –≥—Ä—É–ø–ø—É –≤—Ä–∞–≥–æ–≤
	add_to_group("enemies")
	add_to_group("ranged_enemies")
	print("‚úÖ –í—Ä–∞–≥-—Å—Ç—Ä–µ–ª–æ–∫ –¥–æ–±–∞–≤–ª–µ–Ω –≤ –≥—Ä—É–ø–ø—É 'enemies'")
	
	# –ù–∞—Ö–æ–¥–∏–º —Ü–µ–ª–∏
	call_deferred("_find_initial_targets")
	
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º —Å–∏–≥–Ω–∞–ª—ã
	attack_range_area.body_entered.connect(Callable(self, "_on_attack_range_body_entered"))
	attack_range_area.body_exited.connect(Callable(self, "_on_attack_range_body_exited"))
	hit_box.area_entered.connect(Callable(self, "_on_hit_box_area_entered"))
	
	if player_detection_area:
		player_detection_area.body_entered.connect(Callable(self, "_on_player_detection_area_body_entered"))
		player_detection_area.body_exited.connect(Callable(self, "_on_player_detection_area_body_exited"))
	
	# –ü—Ä–æ—Å—Ç–æ –ø—Ä–æ–∏–≥—Ä—ã–≤–∞–µ–º Idle –∞–Ω–∏–º–∞—Ü–∏—é
	anim_player.play("Idle")

func _find_initial_targets():
	# –ò—â–µ–º —Ü–µ–ª–∏ –ø–æ –≥—Ä—É–ø–ø–∞–º
	player = get_tree().get_first_node_in_group("players")
	cheese = get_tree().get_first_node_in_group("great_cheese")
	
	print("üîç –í—Ä–∞–≥-—Å—Ç—Ä–µ–ª–æ–∫ –∏—â–µ—Ç –Ω–∞—á–∞–ª—å–Ω—ã–µ —Ü–µ–ª–∏:")
	print("   –ò–≥—Ä–æ–∫ (players):", player != null)
	print("   –°—ã—Ä (great_cheese):", cheese != null)
	
	# –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –ø—Ä–∏–æ—Ä–∏—Ç–µ—Ç: —Å—ã—Ä > –∏–≥—Ä–æ–∫
	if cheese and is_instance_valid(cheese):
		original_target = cheese
		target = cheese
		print("üéØ –ü–µ—Ä–≤–æ–Ω–∞—á–∞–ª—å–Ω–∞—è —Ü–µ–ª—å: –°—ã—Ä")
	elif player and is_instance_valid(player):
		original_target = player
		target = player
		print("üéØ –ü–µ—Ä–≤–æ–Ω–∞—á–∞–ª—å–Ω–∞—è —Ü–µ–ª—å: –ò–≥—Ä–æ–∫ (—Å—ã—Ä –Ω–µ –Ω–∞–π–¥–µ–Ω)")
	else:
		print("‚ö†Ô∏è –ù–∏—á–µ–≥–æ –Ω–µ –Ω–∞–π–¥–µ–Ω–æ!")

func scale_stats(hp_multiplier: float, damage_multiplier: float):
	max_health *= hp_multiplier
	current_health = max_health
	attack_damage *= damage_multiplier
	
	if health_bar:
		health_bar.max_value = max_health
		health_bar.value = current_health
	
	print("üìä –í—Ä–∞–≥ —É—Å–∏–ª–µ–Ω: HP=", max_health, " DMG=", attack_damage)

func _physics_process(delta):
	if state == State.DEATH or is_dying:
		return

	# –ü—Ä–∏–º–µ–Ω—è–µ–º –≥—Ä–∞–≤–∏—Ç–∞—Ü–∏—é –í–°–ï–ì–î–ê
	velocity.y += gravity * delta

	# –û–±–Ω–æ–≤–ª—è–µ–º –∫—É–ª–¥–∞—É–Ω –æ—Ç–≤–ª–µ—á–µ–Ω–∏—è
	if distraction_cooldown > 0:
		distraction_cooldown -= delta
		if distraction_cooldown <= 0 and is_distracted_by_player:
			_return_to_original_target()

	# –ï—Å–ª–∏ –Ω–µ—Ç —Ü–µ–ª–∏ –∏–ª–∏ —Ü–µ–ª—å –Ω–µ–≤–∞–ª–∏–¥–Ω–∞ - –æ–±–Ω–æ–≤–ª—è–µ–º —Ü–µ–ª—å
	if not target or not is_instance_valid(target):
		_update_target()
		if not target:
			state = State.IDLE
			velocity.x = 0
			if anim_player.current_animation != "Idle":
				anim_player.play("Idle")
			move_and_slide()
			return

	# –ù–∞–ø—Ä–∞–≤–ª–µ–Ω–∏–µ —Å–ø—Ä–∞–π—Ç–∞
	if target:
		sprite.flip_h = target.global_position.x < global_position.x
	
	# –î–∏—Å—Ç–∞–Ω—Ü–∏—è –¥–æ —Ç–µ–∫—É—â–µ–π —Ü–µ–ª–∏
	var distance_to_target = global_position.distance_to(target.global_position) if target else INF
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º, –µ—Å—Ç—å –ª–∏ –∏–≥—Ä–æ–∫ —Ä—è–¥–æ–º –¥–ª—è –æ—Ç–≤–ª–µ—á–µ–Ω–∏—è
	if not is_distracted_by_player and player and is_instance_valid(player):
		var distance_to_player = global_position.distance_to(player.global_position)
		if distance_to_player <= player_detection_range:
			print("üéØ –ò–≥—Ä–æ–∫ —Ä—è–¥–æ–º! –û—Ç–≤–ª–µ–∫–∞—é—Å—å –Ω–∞ –Ω–µ–≥–æ")
			target = player
			is_distracted_by_player = true
			distraction_cooldown = 10.0
			state = State.CHASE
	
	# –õ–û–ì–ò–ö–ê –°–¢–†–ï–õ–¨–ë–´:
	if state != State.ATTACK and state != State.HURT:
		if distance_to_target <= attack_range and distance_to_target >= min_shooting_distance:
			# –ï—Å–ª–∏ —Ü–µ–ª—å –≤ –∑–æ–Ω–µ —Å—Ç—Ä–µ–ª—å–±—ã
			state = State.ATTACK
		elif distance_to_target > attack_range and distance_to_target <= detection_range:
			# –ï—Å–ª–∏ —Ü–µ–ª—å –≤ –∑–æ–Ω–µ –ø—Ä–µ—Å–ª–µ–¥–æ–≤–∞–Ω–∏—è
			state = State.CHASE
		elif distance_to_target < min_shooting_distance:
			# –ï—Å–ª–∏ —Å–ª–∏—à–∫–æ–º –±–ª–∏–∑–∫–æ - –æ—Ç—Å—Ç—É–ø–∞–µ–º
			state = State.CHASE
		else:
			state = State.IDLE

	match state:
		State.IDLE:
			velocity.x = 0
			if anim_player.current_animation != "Idle" and not is_attacking:
				anim_player.play("Idle")
		State.CHASE:
			state_chase(delta)
		State.ATTACK:
			state_attack()
		State.HURT:
			pass

	move_and_slide()
	
	# –°–±—Ä–∞—Å—ã–≤–∞–µ–º –≤–µ—Ä—Ç–∏–∫–∞–ª—å–Ω—É—é —Å–∫–æ—Ä–æ—Å—Ç—å –µ—Å–ª–∏ –Ω–∞ –∑–µ–º–ª–µ
	if is_on_floor():
		velocity.y = 0

func _return_to_original_target():
	if original_target and is_instance_valid(original_target):
		print("üéØ –í–æ–∑–≤—Ä–∞—â–∞—é—Å—å –∫ –æ—Ä–∏–≥–∏–Ω–∞–ª—å–Ω–æ–π —Ü–µ–ª–∏:", original_target.name)
		target = original_target
		is_distracted_by_player = false
		distraction_cooldown = 0

func _update_target():
	# –ï—Å–ª–∏ –æ—Ç–≤–ª–µ—á–µ–Ω—ã –Ω–∞ –∏–≥—Ä–æ–∫–∞, –ø—Ä–æ–≤–µ—Ä—è–µ–º –µ–≥–æ –¥–æ—Å—Ç—É–ø–Ω–æ—Å—Ç—å
	if is_distracted_by_player:
		if player and is_instance_valid(player):
			# –ü—Ä–æ–≤–µ—Ä—è–µ–º –∑–¥–æ—Ä–æ–≤—å–µ –∏–≥—Ä–æ–∫–∞
			if player.has_method("get_current_health") and player.get_current_health() <= 0:
				_return_to_original_target()
			else:
				target = player
		else:
			_return_to_original_target()
	else:
		# –ü—Ä–æ–≤–µ—Ä—è–µ–º –æ—Ä–∏–≥–∏–Ω–∞–ª—å–Ω—É—é —Ü–µ–ª—å
		if original_target and not is_instance_valid(original_target):
			# –ï—Å–ª–∏ —Å—ã—Ä —É–Ω–∏—á—Ç–æ–∂–µ–Ω, –∞—Ç–∞–∫—É–µ–º –∏–≥—Ä–æ–∫–∞
			if original_target == cheese and player and is_instance_valid(player):
				print("üßÄ –°—ã—Ä —É–Ω–∏—á—Ç–æ–∂–µ–Ω, –ø–µ—Ä–µ–∫–ª—é—á–∞—é—Å—å –Ω–∞ –∏–≥—Ä–æ–∫–∞")
				original_target = player
				target = player
			elif original_target == player and cheese and is_instance_valid(cheese):
				print("üíÄ –ò–≥—Ä–æ–∫ —É–º–µ—Ä, –ø–µ—Ä–µ–∫–ª—é—á–∞—é—Å—å –Ω–∞ —Å—ã—Ä")
				original_target = cheese
				target = cheese
			else:
				print("‚ö†Ô∏è –ù–µ—Ç —Ü–µ–ª–µ–π!")
				target = null

func state_chase(delta):
	if not target or not is_instance_valid(target):
		state = State.IDLE
		return
	
	var distance = global_position.distance_to(target.global_position)
	var dir = Vector2.ZERO
	
	if distance < min_shooting_distance:
		# –°–ª–∏—à–∫–æ–º –±–ª–∏–∑–∫–æ - –æ—Ç—Å—Ç—É–ø–∞–µ–º
		dir = (global_position - target.global_position).normalized()
	elif distance > attack_range:
		# –°–ª–∏—à–∫–æ–º –¥–∞–ª–µ–∫–æ - –ø—Ä–∏–±–ª–∏–∂–∞–µ–º—Å—è
		dir = (target.global_position - global_position).normalized()
	else:
		# –í –∏–¥–µ–∞–ª—å–Ω–æ–π –∑–æ–Ω–µ —Å—Ç—Ä–µ–ª—å–±—ã - —Å—Ç–æ–∏–º –Ω–∞ –º–µ—Å—Ç–µ
		dir = Vector2.ZERO
	
	velocity.x = dir.x * move_speed
	
	if anim_player.current_animation != "Run" and not is_attacking:
		anim_player.play("Run")
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º, –Ω–∞—Ö–æ–¥–∏–º—Å—è –ª–∏ –º—ã –≤ –∑–æ–Ω–µ —Å—Ç—Ä–µ–ª—å–±—ã
	if distance <= attack_range and distance >= min_shooting_distance:
		state = State.ATTACK

func state_attack():
	if not target or not is_instance_valid(target):
		state = State.IDLE
		return
	
	# –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º—Å—è –¥–ª—è —Å—Ç—Ä–µ–ª—å–±—ã
	velocity.x = 0
	
	var distance = global_position.distance_to(target.global_position)
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º –¥–∏—Å—Ç–∞–Ω—Ü–∏—é
	if distance < min_shooting_distance or distance > attack_range:
		state = State.CHASE
		return
	
	if can_attack and not is_attacking:
		perform_ranged_attack()

func perform_ranged_attack():
	can_attack = false
	is_attacking = true
	velocity.x = 0
	
	# –ü—Ä–æ–∏–≥—Ä—ã–≤–∞–µ–º –∞–Ω–∏–º–∞—Ü–∏—é –∞—Ç–∞–∫–∏
	if anim_player.has_animation("Attack"):
		anim_player.play("Attack")
	else:
		# –ï—Å–ª–∏ –Ω–µ—Ç –∞–Ω–∏–º–∞—Ü–∏–∏ Attack, –∏—Å–ø–æ–ª—å–∑—É–µ–º Idle
		anim_player.play("Idle")
	
	# –ñ–¥—ë–º –º–æ–º–µ–Ω—Ç –≤—ã—Å—Ç—Ä–µ–ª–∞ (0.4 —Å–µ–∫—É–Ω–¥—ã)
	await get_tree().create_timer(0.4).timeout
	
	# –°—Ç—Ä–µ–ª—è–µ–º
	shoot_projectile()
	
	# –ñ–¥—ë–º –æ–∫–æ–Ω—á–∞–Ω–∏—è –∞–Ω–∏–º–∞—Ü–∏–∏
	if anim_player.has_animation("Attack"):
		await anim_player.animation_finished
	else:
		# –ï—Å–ª–∏ –Ω–µ—Ç –∞–Ω–∏–º–∞—Ü–∏–∏, –∂–¥—ë–º –Ω–µ–º–Ω–æ–≥–æ
		await get_tree().create_timer(0.4).timeout
	
	is_attacking = false
	
	# –ñ–¥—ë–º –∫—É–ª–¥–∞—É–Ω
	await get_tree().create_timer(attack_cooldown).timeout
	can_attack = true

func shoot_projectile():
	if not projectile_scene or not target or not is_instance_valid(target):
		print("‚ö†Ô∏è –ù–µ –º–æ–≥—É –≤—ã—Å—Ç—Ä–µ–ª–∏—Ç—å: –Ω–µ—Ç —Å–Ω–∞—Ä—è–¥–∞ –∏–ª–∏ —Ü–µ–ª–∏")
		return
	
	print("üéØ –¶–µ–ª—å –¥–ª—è –≤—ã—Å—Ç—Ä–µ–ª–∞: ", target.name)
	print("üéØ –ì—Ä—É–ø–ø—ã —Ü–µ–ª–∏: ", target.get_groups())
	print("üéØ –¢–∏–ø —Ü–µ–ª–∏: ", target.get_class())
	
	var projectile = projectile_scene.instantiate()
	
	# –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –ø–æ–∑–∏—Ü–∏—é –≤—ã—Å—Ç—Ä–µ–ª–∞
	projectile.global_position = shoot_point.global_position
	
	# –†–∞—Å—Å—á–∏—Ç—ã–≤–∞–µ–º –Ω–∞–ø—Ä–∞–≤–ª–µ–Ω–∏–µ –∫ —Ü–µ–ª–∏
	var direction = (target.global_position - shoot_point.global_position).normalized()
	print("üéØ –ù–∞–ø—Ä–∞–≤–ª–µ–Ω–∏–µ –≤—ã—Å—Ç—Ä–µ–ª–∞: ", direction)
	
	# –ü–µ—Ä–µ–¥–∞—ë–º –ø–∞—Ä–∞–º–µ—Ç—Ä—ã —Å–Ω–∞—Ä—è–¥—É
	if projectile.has_method("setup"):
		projectile.setup(direction, projectile_speed, attack_damage)
	
	# –ù–∞—Å—Ç—Ä–∞–∏–≤–∞–µ–º —Å–ø—Ä–∞–π—Ç —Å–Ω–∞—Ä—è–¥–∞
	if projectile.has_node("Sprite2D"):
		projectile.get_node("Sprite2D").rotation = direction.angle()
	elif projectile.has_node("AnimatedSprite2D"):
		projectile.get_node("AnimatedSprite2D").rotation = direction.angle()
	
	# –î–æ–±–∞–≤–ª—è–µ–º –≤ —Å—Ü–µ–Ω—É (–≤ —Ä–æ–¥–∏—Ç–µ–ª—è –≤—Ä–∞–≥–∞)
	get_parent().add_child(projectile)
	
	print("üî´ –í—Ä–∞–≥ —Å—Ç—Ä–µ–ª—è–µ—Ç –≤ ", target.name)

func target_in_attack_range() -> bool:
	if not target or not is_instance_valid(target):
		return false
	
	var distance = global_position.distance_to(target.global_position)
	return distance <= attack_range and distance >= min_shooting_distance

func _on_hit_box_area_entered(area):
	if area.is_in_group("player_attack"):
		var dmg = 20.0
		if area.has_meta("damage"):
			dmg = float(area.get_meta("damage"))
		take_damage(dmg)

func take_damage(amount: float):
	if state == State.DEATH or is_dying:
		return
	
	current_health -= amount
	current_health = max(current_health, 0)

	if health_bar:
		health_bar.value = current_health

	if current_health <= 0:
		die()
	else:
		state = State.HURT
		
		# –ü—Ä–æ–∏–≥—Ä—ã–≤–∞–µ–º –∞–Ω–∏–º–∞—Ü–∏—é –ø–æ–ª—É—á–µ–Ω–∏—è —É—Ä–æ–Ω–∞ –µ—Å–ª–∏ –µ—Å—Ç—å
		if anim_player.has_animation("Hurt"):
			anim_player.play("Hurt")
			await anim_player.animation_finished
		else:
			# –ò–ª–∏ –ø—Ä–æ—Å—Ç–æ –∂–¥—ë–º –∫–æ—Ä–æ—Ç–∫–æ–µ –≤—Ä–µ–º—è
			await get_tree().create_timer(0.3).timeout
		
		# –í–æ–∑–≤—Ä–∞—â–∞–µ–º—Å—è –∫ –ø—Ä–µ–¥—ã–¥—É—â–µ–º—É —Å–æ—Å—Ç–æ—è–Ω–∏—é
		if target and target_in_attack_range():
			state = State.ATTACK
		else:
			state = State.CHASE

func die():
	if is_dying:
		return
	
	is_dying = true
	state = State.DEATH
	velocity = Vector2.ZERO
	
	# –û—Ç–∫–ª—é—á–∞–µ–º –∫–æ–ª–ª–∏–∑–∏–∏
	set_collision_layer(0)
	set_collision_mask(0)
	
	anim_player.play("Death")
	await anim_player.animation_finished

	# –ü—Ä–∏–º–µ–Ω—è–µ–º –±–æ–Ω—É—Å —à–∞–Ω—Å–∞ –¥—Ä–æ–ø–∞ –æ—Ç Salli
	var drop_multiplier = 1.0
	var crystal_multiplier = 1.0
	
	if save_system:
		# –ü–æ–ª—É—á–∞–µ–º —É—Ä–æ–≤–µ–Ω—å —É–ª—É—á—à–µ–Ω–∏—è –¥—Ä–æ–ø–∞ –æ—Ç Salli
		var drop_level = save_system.get_npc_upgrade_level("salli_drop_chance")
		if drop_level > 0:
			# –ö–∞–∂–¥—ã–π —É—Ä–æ–≤–µ–Ω—å –¥–∞—ë—Ç +5% –∫ —à–∞–Ω—Å—É –¥—Ä–æ–ø–∞ (0.05)
			drop_multiplier = 1.0 + (drop_level * 0.05)
			crystal_multiplier = 1.0 + (drop_level * 0.05)
			print("üéØ –ë–æ–Ω—É—Å –¥—Ä–æ–ø–∞ –æ—Ç Salli: √ó", drop_multiplier, " (—É—Ä–æ–≤–µ–Ω—å ", drop_level, ")")
	
	# –®–∞–Ω—Å –≤—ã–ø–∞–¥–µ–Ω–∏—è –æ–±—ã—á–Ω–æ–≥–æ –ª—É—Ç–∞ (–º—É—Å–æ—Ä–∞) —Å —É—á—ë—Ç–æ–º –±–æ–Ω—É—Å–∞
	var final_item_chance = item_drop_chance * drop_multiplier
	# –û–≥—Ä–∞–Ω–∏—á–∏–≤–∞–µ–º –º–∞–∫—Å–∏–º–∞–ª—å–Ω—ã–π —à–∞–Ω—Å 80%
	final_item_chance = min(final_item_chance, 0.8)
	
	if item_drop_scene and randf() <= final_item_chance:
		var item = item_drop_scene.instantiate()
		if item.has_method("set_enemy_id"):
			item.set_enemy_id(my_unique_id)
		get_parent().add_child(item)
		item.global_position = global_position
		print("üì¶ –û–±—ã—á–Ω—ã–π –ª—É—Ç –≤—ã–ø–∞–ª (—à–∞–Ω—Å: ", int(final_item_chance * 100), "%)")
	
	# –®–∞–Ω—Å –≤—ã–ø–∞–¥–µ–Ω–∏—è –∫—Ä–∏—Å—Ç–∞–ª–ª–∞ —Å —É—á—ë—Ç–æ–º –±–æ–Ω—É—Å–∞
	var final_crystal_chance = crystal_drop_chance * crystal_multiplier
	# –û–≥—Ä–∞–Ω–∏—á–∏–≤–∞–µ–º –º–∞–∫—Å–∏–º–∞–ª—å–Ω—ã–π —à–∞–Ω—Å 70%
	final_crystal_chance = min(final_crystal_chance, 0.7)
	
	if crystal_drop_scene and randf() <= final_crystal_chance:
		var crystal = crystal_drop_scene.instantiate()
		if crystal.has_method("set_enemy_id"):
			crystal.set_enemy_id(my_unique_id)
		get_parent().add_child(crystal)
		crystal.global_position = global_position
		print("üíé –ö—Ä–∏—Å—Ç–∞–ª–ª –≤—ã–ø–∞–ª (—à–∞–Ω—Å: ", int(final_crystal_chance * 100), "%)")
	
	
	# –û—Ç–º–µ—á–∞–µ–º –≤—Ä–∞–≥–∞ –∫–∞–∫ —É–±–∏—Ç–æ–≥–æ
	if save_system and my_unique_id != "":
		save_system.mark_enemy_killed(my_unique_id)
	
	# –£–¥–∞–ª—è–µ–º –≤—Ä–∞–≥–∞
	queue_free()
	
	# –≠–º–∏—Ç–∏—Ä—É–µ–º —Å–∏–≥–Ω–∞–ª —Å–º–µ—Ä—Ç–∏ –¥–ª—è WaveManager
	get_tree().call_group("wave_manager", "_on_enemy_died")

func _on_attack_range_body_entered(body):
	if (body.is_in_group("great_cheese") or body.is_in_group("players")) and target == body:
		var distance = global_position.distance_to(body.global_position)
		if distance >= min_shooting_distance:
			state = State.ATTACK

func _on_attack_range_body_exited(body):
	if (body.is_in_group("great_cheese") or body.is_in_group("players")) and state != State.HURT:
		state = State.CHASE

func _on_player_detection_area_body_entered(body):
	if body.is_in_group("players"):
		print("üéØ –û–±–Ω–∞—Ä—É–∂–µ–Ω –∏–≥—Ä–æ–∫ –≤ –∑–æ–Ω–µ!")
		if not is_distracted_by_player:
			print("üéØ –û—Ç–≤–ª–µ–∫–∞—é—Å—å –Ω–∞ –∏–≥—Ä–æ–∫–∞!")
			target = body
			is_distracted_by_player = true
			distraction_cooldown = 10.0

func _on_player_detection_area_body_exited(body):
	if body.is_in_group("players") and is_distracted_by_player:
		print("üéØ –ò–≥—Ä–æ–∫ –≤—ã—à–µ–ª –∏–∑ –∑–æ–Ω—ã –æ–±–Ω–∞—Ä—É–∂–µ–Ω–∏—è")
		distraction_cooldown = 3.0

func stop_moving():
	state = State.IDLE
	velocity = Vector2.ZERO
	if anim_player:
		anim_player.play("Idle")

func apply_wave_bonus(wave_number: int):
	pass
